--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ upload-release: # задача с именем upload-release
   script: 
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
     - echo "PRIVATE-TOKEN: ${MY_TOKEN} ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
-    - echo "JOB-TOKEN: ${CI_JOB_TOKEN}    -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
+    - echo "JOB-TOKEN: ${CI_JOB_TOKEN}    -T sausage-store-0.0.1.zip ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
     - > # скачивание артефакта в файл sausage-store-0.0.1.zip
       curl --location --output sausage-store-0.0.1.zip -H "PRIVATE-TOKEN: ${MY_TOKEN}"
       "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
