--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ include:
 cache:
   key: $CI_COMMIT_REF_SLUG
   paths:
-  - .npm/
+    - .npm/
 
 build-code-job: # задача с именем build-code-job
   stage: build   # этап build
@@ -69,15 +69,17 @@ sonarqube-frontend-sast:
         -Dsonar.projectName=${SONAR_PROJECT_NAME_FRONT}
 
 upload-release: # задача с именем upload-release
+  variables:
+    GIT_STRATEGY: none
   stage: release # этап release
   # only: # запуск этого шага только при изменениях в директориях backend и frontend
   #   changes:
   #   - backend//*
   #   - frontend//*
-  script: 
+  script:
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
-    - echo "PRIVATE-TOKEN: ${MY_TOKEN} ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
-    - echo "JOB-TOKEN: ${CI_JOB_TOKEN}    -T sausage-store-0.0.1.zip ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
+    - echo "PRIVATE-TOKEN ${MY_TOKEN} ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
+    - echo "JOB-TOKEN ${CI_JOB_TOKEN}    -T sausage-store-0.0.1.zip ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
     - > # скачивание артефакта в файл sausage-store-0.0.1.zip
       curl --location --output sausage-store-0.0.1.zip -H "PRIVATE-TOKEN: ${MY_TOKEN}"
       "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
