modify gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ cache:
   key: $CI_COMMIT_REF_SLUG
   paths:
     - .npm/
+    - .m2/repository
 
 build-code-job: # задача с именем build-code-job
   stage: build   # этап build
@@ -78,11 +79,11 @@ upload-release: # задача с именем upload-release
   #   - frontend//*
   script:
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
-    - echo "PRIVATE-TOKEN ${MY_TOKEN} ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
     - echo "JOB-TOKEN ${CI_JOB_TOKEN}    -T sausage-store-0.0.1.zip ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
     - > # скачивание артефакта в файл sausage-store-0.0.1.zip
       curl --location --output sausage-store-0.0.1.zip -H "PRIVATE-TOKEN: ${MY_TOKEN}"
-      "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/${CI_COMMIT_BRANCH}/download"
+      "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${ARTIFACT_JOB_ID}/artifacts/"
+    - ls -l
     - > # сохранение артефакта в package registry
       curl -sSL -H "JOB-TOKEN: ${CI_JOB_TOKEN}"
       -T sausage-store-0.0.1.zip "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/sausage-store/${CI_COMMIT_SHA}/"
