--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,42 +35,42 @@ build-code-job: # задача с именем build-code-job
     reports:
       dotenv: CI_JOB_ID.txt # сохранение файла с переменными как артефакт
 
-.spotbugs-sast:
-  stage: test
-  dependencies:
-    - build-code-job
-  variables:
-    COMPILE: "false"
-    MAVEN_REPO_PATH: ${CI_PROJECT_DIR}/.m2/repository
-
-.sonarqube-backend-sast:
-  stage: test
-  image: maven:3.8-openjdk-16
-  dependencies:
-    - build-code-job
-  script:
-    - cd backend
-    - >
-      mvn verify sonar:sonar -Dsonar.qualitygate.wait=true
-      -Dsonar.projectKey=${SONAR_PROJECT_KEY_BACK}
-      -Dsonar.host.url=${SONARQUBE_URL}
-      -Dsonar.login=${SONAR_LOGIN}
-      -Dsonar.projectName=${SONAR_PROJECT_NAME_BACK}
-
-.sonarqube-frontend-sast:
-  stage: test
-  image: sonarsource/sonar-scanner-cli:latest
-  dependencies:
-    - build-code-job
-  script:
-    - cd frontend
-    - >
-      sonar-scanner \
-        -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT} \
-        -Dsonar.sources=. \
-        -Dsonar.host.url=${SONARQUBE_URL} \
-        -Dsonar.login=${SONAR_LOGIN} \
-        -Dsonar.projectName=${SONAR_PROJECT_NAME_FRONT}
+#spotbugs-sast:
+#  stage: test
+#  dependencies:
+#    - build-code-job
+#  variables:
+#    COMPILE: "false"
+#    MAVEN_REPO_PATH: ${CI_PROJECT_DIR}/.m2/repository
+#
+#sonarqube-backend-sast:
+#  stage: test
+#  image: maven:3.8-openjdk-16
+#  dependencies:
+#    - build-code-job
+#  script:
+#    - cd backend
+#    - >
+#      mvn verify sonar:sonar -Dsonar.qualitygate.wait=true
+#      -Dsonar.projectKey=${SONAR_PROJECT_KEY_BACK}
+#      -Dsonar.host.url=${SONARQUBE_URL}
+#      -Dsonar.login=${SONAR_LOGIN}
+#      -Dsonar.projectName=${SONAR_PROJECT_NAME_BACK}
+#
+#sonarqube-frontend-sast:
+#  stage: test
+#  image: sonarsource/sonar-scanner-cli:latest
+#  dependencies:
+#    - build-code-job
+#  script:
+#    - cd frontend
+#    - >
+#      sonar-scanner \
+#        -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT} \
+#        -Dsonar.sources=. \
+#        -Dsonar.host.url=${SONARQUBE_URL} \
+#        -Dsonar.login=${SONAR_LOGIN} \
+#        -Dsonar.projectName=${SONAR_PROJECT_NAME_FRONT}
 
 upload-release: # задача с именем upload-release
 #  variables:
@@ -85,7 +85,7 @@ upload-release: # задача с именем upload-release
   script:
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
     - cd backend
-    - mvn -s settings.xml deploy -DskipTests
+    - mvn -s settings.xml deploy -DskipTests -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository
     - cd ../sausage-store-${VERSION}
     - tar czvf sausage-store-${VERSION}.tar.gz public_html
     - >
