--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 .include:
   - template: Security/SAST.gitlab-ci.yml
 variables:
-  VERSION: 1.0.${CI_PIPELINE_ID}-SNAPSHOT
+  VERSION: 1.0.${CI_PIPELINE_ID}
 
 build-code-job: # задача с именем build-code-job
   stage: build   # этап build
