--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ upload-release: # задача с именем upload-release
   script:
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
     - cd backend
-    - mvn -s settings.xml deploy -DskipTests
+    - mvn -s settings.xml deploy -DskipTests -Dversion.application=${VERSION}
     - cd ../sausage-store-${VERSION}
     - tar czvf sausage-store-${VERSION}.tar.gz public_html
     - >
