--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,8 +25,8 @@
     </properties>
     <distributionManagement>
         <repository>
-            <id>backtest</id>
-            <name>backtest</name>
+            <id>sausage-store</id>
+            <name>sausage-store</name>
             <url>${env.NEXUS_REPO_BACKEND_URL}/sausage-store/</url>
         </repository>
     </distributionManagement>
