--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ upload-release: # задача с именем upload-release
   script:
     - echo "Get artifact from job ${ARTIFACT_JOB_ID}"
     - cd backend
-#    - mvn -s settings.xml deploy -DskipTests -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository -Dversion.application=${VERSION}
+    - mvn -s settings.xml deploy -DskipTests -Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository -Dversion.application=${VERSION}
     - cd ../sausage-store-${VERSION}
     - tar czvf sausage-store-${VERSION}.tar.gz public_html
     - >
