--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -3,10 +3,13 @@ stages:
   - test
   - release
   - deploy
-.include:
+include:
   - template: Security/SAST.gitlab-ci.yml
+  - local: /template.gitlab-ci.yml
 variables:
   VERSION: 1.0.${CI_PIPELINE_ID}
+  SAST_EXCLUDED_ANALYZERS: "spotbugs"
+
 
 build-code-job: # задача с именем build-code-job
   stage: build   # этап build
@@ -42,10 +45,12 @@ sonarqube-frontend-sast:
 
 upload-release: # задача с именем upload-release
   stage: release # этап release
+  dependencies:
+    - build-code-job
   script:
     - tar czvf sausage-store-${VERSION}.tar.gz sausage-store-${VERSION}/public_html
     - >
-      curl -v -u "${NEXUS_REPO_USER}:${NEXUS_REPO_PASS}" --upload-file sausage-store-${VERSION}.tar.gz ${NEXUS_REPO_FRONTEND_URL}/sausage-store-front/sausage-store/$VERSION/sausage-store-$VERSION.tar.gz
+      curl -v -u "${NEXUS_REPO_USER}:$(echo $NEXUS_REPO_PASS | base64 -d)" --upload-file sausage-store-${VERSION}.tar.gz ${NEXUS_REPO_FRONTEND_URL}/sausage-store-front/sausage-store/$VERSION/sausage-store-$VERSION.tar.gz
     - > # уведомление в slack о выполнении пайплайна
       curl -X POST -H "Content-type: application/json" --data "{
                                                        	\"blocks\": [
@@ -53,7 +58,7 @@ upload-release: # задача с именем upload-release
                                                        			\"type\": \"section\",
                                                        			\"text\": {
                                                        				\"type\": \"mrkdwn\",
-                                                       				\"text\": \"Вышла новая версия сосисочной :rocket: — $VERSION from $GITLAB_USER_LOGIN.\nСкачать фронт можно по ссылке\"
+                                                       				\"text\": \"Вышла новая версия сосисочной :pepeclap: — $VERSION from $GITLAB_USER_LOGIN.\nСкачать фронт можно по ссылке\"
                                                        			},
                                                        			\"accessory\": {
                                                        				\"type\": \"button\",
@@ -74,16 +79,8 @@ upload-release: # задача с именем upload-release
 
 deploy:
   stage: deploy
-  before_script:
-    #устанавливаем ssh-agent для удобства аутентификации по ssh
-    - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
-    - eval $(ssh-agent -s)
-    #сохраняем сгенеренный ранее приватный ключ для раннера
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 600 ~/.ssh
-    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
+  when: manual
+  extends: .ssh-connection
   script:
     - scp ./frontend/sausage-store-frontend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-frontend.service
-    - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_FRONTEND_URL=${NEXUS_REPO_FRONTEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=${NEXUS_REPO_PASS}";setsid /bin/bash -s " < ./frontend/deploy.sh
+    - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_FRONTEND_URL=${NEXUS_REPO_FRONTEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS";setsid /bin/bash -s " < ./frontend/deploy.sh
