--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -88,7 +88,9 @@ upload-release: # задача с именем upload-release
 
 deploy:
   stage: deploy
-  when: manual
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: manual
   extends: .ssh-connection
   environment:
     name: staging
