--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -94,7 +94,7 @@ deploy:
   extends: .ssh-connection
   environment:
     name: staging
-    url: https://{DEV_HOST}:{DEV_APP_PORT}
+    url: http://{DEV_HOST}:{DEV_APP_PORT}
   script:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
     - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_BACKEND_URL=${NEXUS_REPO_BACKEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS";setsid /bin/bash -s " < ./backend/deploy.sh
